--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const description = seo?.page_description || site.description;
 const image = seo?.featured_image || site.image;
 const image_alt = seo?.featured_image_alt || site.image_alt;
 const canonicalURL = new URL(seo?.canonical_url ?? Astro.url.pathname, baseUrl);
+const base = import.meta.env.BASE_URL;
 ---
 
 <!DOCTYPE html>
@@ -36,15 +37,15 @@ const canonicalURL = new URL(seo?.canonical_url ?? Astro.url.pathname, baseUrl);
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/vendor/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="/vendor/phosphor-icons/css/phosphor.css" rel="stylesheet" />
-    <link href="/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link href={`${base}vendor/bootstrap/bootstrap.min.css`} rel="stylesheet" />
+    <link href={`${base}vendor/phosphor-icons/css/phosphor.css`} rel="stylesheet" />
+    <link href={`${base}vendor/magnific-popup/magnific-popup.css`} rel="stylesheet" />
+    <link rel="shortcut icon" href={`${base}images/favicon.ico`} type="image/x-icon" />
+    <link rel="icon" href={`${base}images/favicon.png`} type="image/x-icon" />
+    <link rel="apple-touch-icon" href={`${base}apple-touch-icon.png`} />
+    <link rel="icon" type="image/svg+xml" href={`${base}favicon.svg`} />
+    <link rel="icon" type="image/png" href={`${base}touch-icon.png`} sizes="192x192" />
+    <link rel="icon" type="image/png" href={`${base}images/favicon.png`} />
     <meta name="generator" content={Astro.generator} />
 
     <SEO
@@ -75,15 +76,15 @@ const canonicalURL = new URL(seo?.canonical_url ?? Astro.url.pathname, baseUrl);
     />
   </head>
   <body>
-    <Navigation client:load pageUrl={canonicalURL} />
+    <Navigation client:load pageUrl={canonicalURL} base={base} />
     <slot />
-    <Footer />
+    <Footer base={base} />
 
-    <script src="/vendor/jQuery/jquery.min.js" is:inline></script>
-    <script src="/vendor/bootstrap/bootstrap.bundle.min.js" is:inline></script>
-    <script src="/vendor/counter-up/countup.js" is:inline></script>
-    <script src="/vendor/magnific-popup/magnific-popup.min.js" is:inline
+    <script src={`${base}vendor/jQuery/jquery.min.js`} is:inline></script>
+    <script src={`${base}vendor/bootstrap/bootstrap.bundle.min.js`} is:inline></script>
+    <script src={`${base}vendor/counter-up/countup.js`} is:inline></script>
+    <script src={`${base}vendor/magnific-popup/magnific-popup.min.js`} is:inline
     ></script>
-    <script src="/js/script.js" async></script>
+    <script src={`${base}js/script.js`} async></script>
   </body>
 </html>
