--- a/src/styles/components/_pricing.scss
+++ b/src/styles/components/_pricing.scss
@@ -35,18 +35,22 @@
       margin-bottom: 8px;
       line-height: 37.5px;
       padding-left: $base-padding * 2.9;
+      padding-right: $base-padding * 2.9;
       transition: all 0.3s ease-in-out;
 
       @include media-breakpoint-down-xl {
         padding-left: $base-padding * 1.5;
+        padding-right: $base-padding * 1.5;
       }
 
       @include media-breakpoint-down-lg {
         padding-left: $base-padding * 2.9;
+        padding-right: $base-padding * 2.9;
       }
 
       @include media-breakpoint-down-md {
         padding-left: $base-padding * 1.5;
+        padding-right: $base-padding * 1.5;
       }
     }
 
@@ -58,6 +62,7 @@
       font-weight: 400;
       font-family: $font-primary;
       padding-left: $base-padding * 2.9;
+      padding-right: $base-padding * 2.9;
 
       @include media-breakpoint-down-xxl {
         font-size: $base-font-size * 1.1;
@@ -66,15 +71,18 @@
       @include media-breakpoint-down-xl {
         font-size: $base-font-size * 1;
         padding-left: $base-padding * 1.5;
+        padding-right: $base-padding * 1.5;
       }
 
       @include media-breakpoint-down-lg {
         font-size: $base-font-size * 1.25;
         padding-left: $base-padding * 2.9;
+        padding-right: $base-padding * 2.9;
       }
 
       @include media-breakpoint-down-md {
         padding-left: $base-padding * 1.5;
+        padding-right: $base-padding * 1.5;
       }
     }
 
